5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1577_1332.log
== TEST (2019-03-26 18:20:15) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:15) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:16) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:16) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:26) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:26) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- EXECUTION TIME:
0.137282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:13) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:21:37) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:38) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- EXECUTION TIME:
0.135947
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
